added synth; connected synth playSong to button on DOM;

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="menu">
 		<button onclick="Controller.notify()">Notify Me!</button>
 		<button>Web GL</button>
-		<button>Web Audio</button>
+		<button onclick="Controller.playSong()">Web Audio</button>
 		<button>Gamepad</button>
 	</div>
 
