--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<script type="text/javascript" src="lib/p2.js" charset="utf-8"></script>
 	<script type="text/javascript" src="lib/pixi.min.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/controller.js" charset="utf-8"></script>
 	<script type="text/javascript" src="bundle.js" charset="utf-8"></script>
