--- a/index.html
+++ b/index.html
@@ -12,20 +12,16 @@
 	<script type="text/javascript" src="bundle.js" charset="utf-8" async></script>
 </head>
 
-<div id="app" class="container nc-button">
-	<!--<ul>
-		<li>-->
+<div id="app" class="container">
 	<div>
 		<!--<div class="logo"><img src="img/cat-small.jpg"></div>-->
-		<router-link to="/" class="button">Home</router-link>
-		<router-link to="/notification" class="button">Notification</router-link>
-		<router-link to="/webgl" class="button">WebGL</router-link>
-		<router-link to="/audio" class="button">Audio</router-link>
-		<router-link to="/gamepad" class="button">Gamepad</router-link>
+		<router-link to="/" class="button nc-button">Home</router-link>
+		<router-link to="/notification" class="button nc-button">Notification</router-link>
+		<router-link to="/webgl" class="button nc-button">WebGL</router-link>
+		<router-link to="/audio" class="button nc-button">Audio</router-link>
+		<router-link to="/gamepad" class="button nc-button">Gamepad</router-link>
 	</div>
-	<!--</li>
-	</ul>-->
-	<div class="section">
+	<div class="section white-background">
 		<router-view></router-view>
 		<br> &#10084; from coatsnmore
 	</div>
